[gd_scene load_steps=9 format=3 uid="uid://y50eclnqn36m"]

[ext_resource type="Theme" uid="uid://bdequgd26nm10" path="res://main_theme.tres" id="1_hssit"]
[ext_resource type="Script" path="res://scene/cardUI/card_ui.gd" id="2_s6iyj"]
[ext_resource type="Script" path="res://scene/cardUI/card_statemachine.gd" id="3_1mrrq"]
[ext_resource type="Script" path="res://scene/cardUI/card_states/base.gd" id="4_xo3e6"]
[ext_resource type="Script" path="res://scene/cardUI/card_states/clicked.gd" id="5_msnjh"]
[ext_resource type="Script" path="res://scene/cardUI/card_states/dragging.gd" id="6_b10eb"]
[ext_resource type="Script" path="res://scene/cardUI/card_states/released.gd" id="7_m2lmm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0c7h4"]
size = Vector2(25, 30)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 3
anchors_preset = 0
offset_right = 25.0
offset_bottom = 30.0
theme = ExtResource("1_hssit")
script = ExtResource("2_s6iyj")
metadata/_edit_group_ = true

[node name="Color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.120089, 0.274945, 0.119964, 1)

[node name="State" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(12.5, 15)
shape = SubResource("RectangleShape2D_0c7h4")

[node name="CardStatemachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_1mrrq")
initial_state = NodePath("BASE")

[node name="BASE" type="Node" parent="CardStatemachine"]
script = ExtResource("4_xo3e6")

[node name="CLICKED" type="Node" parent="CardStatemachine"]
script = ExtResource("5_msnjh")
state = 1

[node name="DRAGGING" type="Node" parent="CardStatemachine"]
script = ExtResource("6_b10eb")
state = 2

[node name="RELEASED" type="Node" parent="CardStatemachine"]
script = ExtResource("7_m2lmm")
state = 4

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
